# libhwmath

./: .gitignore  CMakeLists.txt  CTestCustom.cmake  README.md  bak2.cpp  demo.cpp  main.cpp  readme.md
bak/bak_mul/boost_platform/: mul_lod.sv  mul_para.sv
bak/bak_mul/loz_para/: calculate.cpp  main.cpp
bak/bak_mul/mul_logic/: calculate.cpp  fp32.h
bak/bak_mul/mul_ver/: c_out.txt  fp32.h  main.cpp  mul  mul_in.txt  mul_out.txt  mul_tb.sv
bak/bak_mul/mul_wallace/: calculate.h  fp32.cpp
bak/bak_mul/verilator/: mul_para.sv  mul_tb.cpp
bak/bak_mul/verilator/obj_dir/: Vmul_para  Vmul_para.cpp  Vmul_para__Slow.cpp  Vmul_para__Trace__Slow.cpp  Vmul_para_classes.mk
bak/mul/mul/: main.cpp
bak/mul/mul/boost_platform/: fp32.cpp  main.cpp  makefile  mul  mul_tb.sv  simv  test.cpp  test.h  test.sv
bak/mul/mul/boost_platform/csrc/: Makefile  _prev_cginfo.json  cgincr.sdb  cginfo.json  cgproc.1074.json  filelist  filelist.cu  pre.cgincr.sdb
bak/mul/mul/boost_platform/simv.daidir/: .vcs.timestamp  binmap.sdb  build_db  cgname.json  elabmoddb.sdb  hslevel_callgraph.sdb  hslevel_level.sdb  hslevel_rtime_level.sdb  pcc.sdb  prof.sdb  simv.kdb  tt.sdb  vcs_rebuild  vcselab_misc_hsim_fegate.db  vcselab_misc_hsim_name.db  vcselab_misc_partition.db  vcselab_misc_tCEYNb  vcselab_misc_vpdnodenums
bak/mul/mul/loz_para/: "".cpp  fp32.cpp  fp32.h  makefile  mul
bak/mul/mul/mul_logic/: main.cpp  makefile  mul_0  mul_e  mul_n
bak/mul/mul/mul_open_source/mul_verilog/: float_mul.v  float_multi_sim.v:Zone.Identifier  makefile
bak/mul/mul/mul_ver/: *.fsdb  .restartSimSession.tcl.old  .synopsys_dve_rebuild.tcl  filelist.f  inter.fsdb.field  makefile
bak/mul/mul/mul_ver/DVEfiles/: dve_checkpoint_70109_1.tcl
bak/mul/mul/mul_ver/csrc/: Makefile  _prev_cginfo.json  cgincr.sdb  (+4 more)
bak/mul/mul/mul_wallace/: filelist.txt  main.cpp  makefile  mul  mul_n  wrong_num.txt
bak/mul/mul/verilator/: filelist.f  mul_lod.sv
boost_platform/: *.fsdb  *.fsdb.chain  *.fsdb.field  *.fsdb.netwk  *.fsdb.podat  *.fsdb.sinf  *.fsdb.str  *.fsdb.tlist  main.cpp  makefile  mul  mul_para.sv  mul_tb.sv  simv
boost_platform/csrc/: _prev_cginfo.json  cgincr.sdb  cginfo.json  cgproc.1524463.json  filelist.cu  filelist.pli  pre.cgincr.sdb
boost_platform/simv.daidir/: .vcs.timestamp  binmap.sdb  elabmoddb.sdb  external_functions  hslevel_callgraph.sdb  hslevel_level.sdb  hslevel_rtime_level.sdb  pcc.sdb  prof.sdb  tt.sdb  vcselab_misc_hsim_elab.db  vcselab_misc_hsim_fegate.db  vcselab_misc_mnmn.db  vcselab_misc_partition.db  vcselab_misc_vpdnodenums
boost_platform/simv.daidir/cc/: cc_bcode.db
boost_platform/simv.daidir/debug_dump/: .version  HsimSigOptDb.sdb  topmodules  vir.sdb
boost_platform/simv.daidir/debug_dump/fsearch/: .create_fsearch_db
build_c/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  mul
build_c/Testing/Temporary/: CTestCostData.txt
build_sv/: simv  vcdplus.vpd
build_sv/csrc/: Makefile.hsopt  _prev_cginfo.json  cgincr.sdb  cginfo.json  cgproc.1224570.json  filelist.cu  pre.cgincr.sdb
build_sv/csrc/archive.12/: _1224570_archive_1.a.info
build_sv/simv.daidir/: .vcs.timestamp  binmap.sdb  build_db  elabmoddb.sdb  hslevel_callgraph.sdb  hslevel_level.sdb  hslevel_rtime_level.sdb  pcc.sdb  prof.sdb  simv.kdb  tt.sdb  vcs_rebuild  vcselab_misc_hsim_elab.db  vcselab_misc_hsim_fegate.db  vcselab_misc_hsim_name.db  vcselab_misc_hsim_uds.db  vcselab_misc_midd.db  vcselab_misc_partition.db  vcselab_misc_tCEYNb  vcselab_misc_vpdnodenums
build_sv/simv.daidir/cc/: cc_bcode.db
build_sv/simv.daidir/debug_dump/: .version  HsimSigOptDb.sdb  src_files_verilog  topmodules  vir.sdb
build_sv/simv.daidir/debug_dump/fsearch/: .create_fsearch_db  check_fsearch_db
loz_para/: main.cpp  mul  test.cpp
mul_logic/: calculate.h  fp32.cpp  fp32.h  main.cpp  mul  mul_0  mul_p  test.cpp
mul_v/: mul_mask.sv  mul_para.sv  mul_tb.sv
src/add/: add_lod.sv  filelist.f
src/model/: fp32.cpp  fp32.h  reflib.cpp
src/rtl/: macro_defs.sv
src/rtl/add/: add.sv  add_lod.sv  add_top.sv
src/rtl/min/: Makefile  fp_classify.sv  fp_min.sv  fp_unpack.sv  inf_chk.sv  max_expo_chk.sv  max_mant_chk.sv  min_res_gen.sv  min_rtl.f  min_top.sv  nan_chk.sv  zero_chk.sv  zero_expo_chk.sv  zero_mant_chk.sv
src/rtl/mul/: filelist.f  mul_1.sv  mul_fixcal.sv  mul_lod.sv  mul_nan_judge.sv  mul_ovf_judge.sv  mul_para.sv  mul_res_mux.sv  mul_rev.sv  mul_rnd.sv  mul_shift_num.sv  mul_sub_shift.sv  mul_tb.sv  mul_top.sv  mul_unpack.sv  shifter_l.sv  shifter_r.sv  shifter_r_light.sv
src/rtl/mul_pipe/: mul_pipe1.sv  mul_pipe2.sv  mul_pipe3.sv  mul_pipe_top.sv  mul_top.sv
src/rtl/mul_pipe/mul_pipe_1/: mul_fixcal.sv  mul_unpack.sv
src/rtl/mul_pipe/mul_pipe_3/: mul_ecp.sv  mul_nan_judge.sv  mul_ovf_judge.sv  mul_pack.sv  mul_res_mux.sv  mul_rev.sv  mul_rnd.sv  mul_sub_shift.sv  shifter_l.sv  shifter_l_light.sv  shifter_r.sv
src/rtl/tb/: filelist.f  min_tb.sv  mul_tb copy.sv  mul_tb.sv
src/test/: MACRO_FUNC.h  cal.cpp  cal.h  debug.cpp  debug.h  fp32.cpp  fp32.h  init.cpp  init.h  main.cpp  pipe.cpp  pipe.h  reflib.h  stimu.cpp  stimu.h  test.cpp  test.h
test/: main.cpp  report_gates.rpt
tool/c_debug/: commands.gdb
tool/exam/: cmodel.h  cmodel_impl.h  main.cpp  my_ref.h  out  ref.h  struct.h
tool/if/: if.cpp  if.h  if_impl.h  main.cpp  out  pipe.cpp  pipe.h
tool/model/: cal.cpp  cal.h  cmodel.cpp  cmodel.h  cmodel_impl.h  cmodel_my.cpp  cmodel_my.h  fp_classify.cpp  fp_classify.h  main.cpp  my_cmodel.h  my_ref.cpp  my_ref.h  out  ref.cpp  ref.h  ref_my.cpp  ref_my.h  rtl_map.h  rtl_model.h  struct.h
tool/model/op/cmodel/: check_op.cpp  check_op.h  cmodel_add.cpp  cmodel_add.h  cmodel_fma.cpp  cmodel_fma.h  cmodel_min.cpp  cmodel_min.h  cmodel_mul.cpp  cmodel_mul.h
tool/model/op/ref/: ref_add.cpp  ref_add.h  ref_fma.cpp  ref_fma.h  ref_min.cpp  ref_min.h  ref_mul.cpp  ref_mul.h  ref_op.h  test_min.cpp
tool/test/: checker.cpp  checker.h  info.cpp  info.h  main.cpp  out  stimus.cpp  stimus.h
tool/wrapper/: arg_passer.cpp  arg_passer.h  main.cpp  out  tester.cpp  tester.h  tester_impl.h
(+51 files in other folders)
